<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="retry">Försök igen</string>
    <string name="logging_in">Loggar in...</string>
    <string name="app_name">iglaset</string>
    <string name="search_label">Sök</string>
    <string name="search_description">Namn, artikelnummer eller valfri text</string>
    <string name="home_label">Hem</string>
    <string name="yes">Ja</string>
    <string name="no">Nej</string>
    <string name="searching">Söker...</string>
    <string name="search_hint">Namn eller valfri text</string>
    <string name="search_invoke">Starta sökning</string><!-- TODO: How is this used? -->
    <string name="search_results">Sökresultat</string>
    <string name="no_search_result">Sökningen gav inga träffar</string>
    <string name="no_recommendations_result">Inga rekommendationer än. Ju fler betyg du sätter desto fler och bättre blir dina rekommendationer.</string>
    <string name="packings">Förpackningar</string>
    <string name="loading_comments">Hämtar kommentarer...</string>
    <string name="no_comments">Inga kommentarer än</string>
    <string name="comments">Kommentarer</string>
    <string name="about">Om</string>
    <string name="about_this_app">iglaset.se är en av Sveriges största dryckesdatabaser med kommentarer och betyg.\n\nUtvecklad av Johan Nilsson och Marco Alanen.</string>
    <string name="settings">Inställningar</string>
    <string name="search_preferences">Sök</string>
    <string name="clear_search_history_preference">Radera sökhistorik</string>
    <string name="clear_search_history_summary_preference">Raderar tidigare sökhistorik...</string>
    <string name="search_history_cleared">Sökhistorik raderad</string>
    <string name="goto_iglaset">Visa på iglaset.se</string>
    <string name="rate">Sätt betyg</string>
    <string name="scan_barcode">Scanna</string>
    <string name="scan_barcode_description">Scanna streckkod, 1800+ koder i databasen.</string>
    <string name="update_barcode">Scanna EAN till produkt</string>
    <string name="my_rating">Mitt betyg</string>
    <string name="add_rating">Sätt betyg</string>
    <string name="adding_rating">Sätter betyg...</string>
    <string name="rating_added">Betyg satt</string>
    <string name="not_logged_in">Ej inloggad</string>
    <string name="login_to_proceed_message">För att komma åt den här funktionen måste du först logga in.</string>
    <string name="login_success">Inloggad</string>
    <string name="login_failed">Inloggning misslyckades</string>
    <string name="login_failed_message">Kunde inte logga in, kontrollera användarnamn och lösenord.</string>
    <string name="back">Tillbaka</string>
    <string name="categories">Kategorier</string>
    <string name="category_description">Sprit, Starkvin, Öl, Röda viner...</string>
    <string name="lists">Listor</string>
    <string name="loading_articles">Hämtar artiklar...</string>
    <string name="donate">Donera</string>
    <string name="feedback">Feedback</string>
    <string name="send_email">Skicka e-post...</string>
    <string name="recommendations_label">Rekommendationer</string>
    <string name="recommendations_description">Baserat på satta betyg.</string>
    <string name="rated_articles_label">Betyg</string>
    <string name="rated_articles_description">Betygsatta artiklar.</string>
    <string name="comment">Kommentera</string>
    <string name="adding_comment">Lägger till kommentar...</string>
    <string name="add_comment">Lägg till kommentar</string>
    <string name="comment_saved">Kommentar sparad</string>
    <string name="failed">Misslyckades</string>
    <string name="manufacturers_description">Tillverkarens beskrivning</string>
    <string name="show_description">Visa beskrivning</string>
    <string name="hide">Göm</string>
    <string name="cancel">Avbryt</string>
    <string name="crash_report_dialog_title">Skicka krashrapport?</string>
    <string name="crash_report_dialog_message">Ett fel inträffade, vill du skicka en krashrapport för att få det här felet fixat?</string>
    <string name="crash_report_email">iglaset-crashreport@markupartist.com</string><!-- Do not translate -->
    <string name="crash_report_mail_subject">iglaset krashrapport</string><!-- Do not translate -->
    <string name="crash_report_mail_body">Genom att skicka denna krashrapport hjälper du oss att fixa buggen. Informationen kommer inte att nyttjas för något annat.</string>
    <string name="image_decode_failed">Trasig bildfil</string>
    <string name="no_selected_tags">0 markerade taggar (sök allt)</string>
    <string name="tag">tagg</string>
    <string name="tags">taggar</string>
    <string name="add_barcode">Lägg in streckkod</string>
    <string name="add_suggested_barcode">Den senast scannade streckkoden (%s) fanns inte i systemet. Vill du lägga in den nu?</string>
    <string name="add">Lägg in</string>
    <string name="forget_barcode">Glöm kod</string>
    <string name="sort_label">Sortering</string>
    <string name="sort_mode_none">Ingen</string>
    <string name="sort_mode_name">Namn</string>
    <string name="sort_mode_producer">Producent</string> 
    <string name="sort_mode_recommendations">Rekommendationer</string>
    <string name="sort_mode_rating">Betyg</string>
    <string name="sort_mode_date">Datum</string>
</resources>
