<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 
    <PreferenceCategory
            android:title="Användardetaljer">
        <EditTextPreference 
            android:key="preference_username"
            android:title="Användarnamn"
            android:summary="Ditt användarnamn på iglaset.se"
        />
        <EditTextPreference 
            android:key="preference_password"
            android:title="Lösenord"
            android:summary="Ditt lösenord på iglaset.se"
            android:dependency="preference_username"
            android:password="true"
        />
    </PreferenceCategory>
     -->
    <PreferenceCategory
            android:title="@string/search_preferences">
        <Preference
	        android:key="preference_clear_search_history"
	        android:title="@string/clear_search_history_preference"
	        android:summary="@string/clear_search_history_summary_preference"
	        />
    </PreferenceCategory>

</PreferenceScreen>
