<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
    >
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/start_bg"
    >
    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
        <!-- Empty dummy to prevent AutoCompleteTextView from receiving focus -->
        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"
            />
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:addStatesFromChildren="true"
        android:gravity="center_vertical"
        android:paddingTop="10dip"
        android:paddingBottom="10dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip">
        <AutoCompleteTextView 
            android:id="@+id/search_text"
            android:dropDownWidth="fill_parent"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:textColor="#000"
            android:singleLine="true"
            android:layout_weight="1"
            android:imeOptions="actionSearch"
            android:lines="1"
            android:inputType="text"
            android:background="@drawable/textfield_search"
            />
        <ImageButton
                android:id="@+id/btn_search"
                android:src="@drawable/ic_btn_search"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:background="@drawable/btn_search_dialog"
                />
    </LinearLayout>
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="10dip"
        android:paddingLeft="10dip"
        >
        <TableRow>
            <Button
                android:id="@+id/btn_scan"
                android:drawableTop="@android:drawable/ic_menu_camera"
                android:layout_width="wrap_content"
                android:layout_height="70dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/btn_default"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:text="@string/scan_barcode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    />
                <TextView
                    android:text="@string/scan_barcode_description"
                    android:layout_width="fill_parent" 
                    android:layout_height="wrap_content"
                    android:id="@+id/scan_barcode_description_view"
                    />
            </LinearLayout>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_lists"
                android:drawableTop="@drawable/ic_menu_archive"
                android:layout_width="wrap_content"
                android:layout_height="70dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/btn_default"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/categories"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/category_description"
                    />
            </LinearLayout>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_recommendations"
                android:drawableTop="@drawable/ic_menu_emoticons"
                android:layout_width="wrap_content"
                android:layout_height="70dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/btn_default"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/recommendations_label"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recommendations_description"
                    />
            </LinearLayout>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_rated_drinks"
                android:drawableTop="@drawable/ic_menu_star"
                android:layout_width="wrap_content"
                android:layout_height="70dip"
                android:layout_marginRight="10dip"
                android:background="@drawable/btn_default"
                />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/rated_articles_label"
                    />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rated_articles_description"
                    />
            </LinearLayout>
        </TableRow>
    </TableLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>